--- a/quitesleep3/res/layout/main.xml
+++ b/quitesleep3/res/layout/main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010-2012 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,62 +17,65 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
 
-<FrameLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" 
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-	<LinearLayout
-	   	android:orientation="vertical"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent">
-	
-	    <com.viewpagerindicator.TitlePageIndicator
-	        android:id="@+id/indicator"
-	        android:layout_height="wrap_content"
-	        android:layout_width="match_parent" />
-	    
-	    <android.support.v4.view.ViewPager
-	        android:id="@+id/pager"
-	        android:layout_width="match_parent"
-	        android:layout_height="0dp"
-	        android:layout_weight="1" />         
-	</LinearLayout>
-	
-	<SlidingDrawer 
-    	android:id="@+id/sliding_drawer"
-    	android:layout_width="match_parent"
-    	android:layout_height="match_parent"     
-    	android:handle="@+id/handle"
-    	android:content="@+id/layout_content" >
-    	
-    	<Button
-    		android:id="@id/handle"
-    		android:layout_width="match_parent"
-    		android:layout_height="wrap_content"
-    		android:gravity="center"
-    		android:text="@string/help_about_sliding_text"    		
-    		android:textStyle="bold"
-    		android:textColor="@color/yellow"    		    		    		
-    		android:background="@drawable/help_about_slide_button" />
-    	<LinearLayout
-    	    android:id="@+id/layout_content"
-    	    android:layout_width="match_parent"
-    	    android:layout_height="match_parent"
-    	    android:orientation="vertical" >    	    
-		   	    <android.support.v4.view.ViewPager
-        			android:id="@+id/help_pager"
-			        android:layout_width="match_parent"
-			        android:layout_height="0dp"
-			        android:layout_weight="1"/>
-			    <com.viewpagerindicator.CirclePageIndicator
-			        android:id="@+id/help_indicator"
-			        android:padding="10dip"
-			        android:layout_height="wrap_content"
-			        android:layout_width="match_parent"/>
-    	</LinearLayout>    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginBottom="40dp"
+        android:orientation="vertical" >
+
+        <com.viewpagerindicator.TitlePageIndicator
+            android:id="@+id/indicator"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/pager"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+    </LinearLayout>
+
+    <SlidingDrawer
+        android:id="@+id/sliding_drawer"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:content="@+id/layout_content"
+        android:handle="@+id/handle" >
+
+        <TextView
+            android:id="@id/handle"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:background="@drawable/help_about_slide_button"
+            android:gravity="center"
+            android:text="@string/help_about_sliding_text"
+            android:textColor="@color/yellow"
+            android:textSize="14sp" />
+
+        <LinearLayout
+            android:id="@+id/layout_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical" >
+
+            <android.support.v4.view.ViewPager
+                android:id="@+id/help_pager"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="1" />
+
+            <com.viewpagerindicator.CirclePageIndicator
+                android:id="@+id/help_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="10dip" />
+        </LinearLayout>
     </SlidingDrawer>
 
 </FrameLayout>
