--- a/quitesleep3/res/values/styles.xml
+++ b/quitesleep3/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<!--  
+<!--
  	Copyright 2010-2012 Cesar Valiente Gordo
  
  	This file is part of QuiteSleep.
@@ -17,20 +17,40 @@
 
     You should have received a copy of the GNU General Public License
     along with QuiteSleep.  If not, see <http://www.gnu.org/licenses/>.
- -->
+-->
 
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
+
     <style name="mySherlockTheme" parent="@style/Theme.quitesleep">
-         <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
+        <item name="vpiTabPageIndicatorStyle">@style/Widget.TabPageIndicator</item>
     </style>
-    <style name="common_button_style" >
-        <item name="android:textSize">@dimen/common_button_text_size</item>
-        <item name="android:textColor">@color/white</item>
+
+    <style name="common_button_style">
+        <item name="android:layout_width">200dp</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_marginTop">10dp</item>
+        <item name="android:layout_marginBottom">10dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_gravity">center_horizontal</item>
         <item name="android:background">@drawable/common_button_selector</item>
-    </style> 
-    <style name="common_toggle_button_style" >
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:contentDescription">@string/common_button_content_description</item>
+    </style>
+
+    <style name="common_toggle_button_style">
         <item name="android:textSize">@dimen/common_button_text_size</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:background">@drawable/common_toggle_button_selector</item>
-    </style>            
+    </style>
+
+    <style name="divider_grey_normal">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">3dp</item>
+        <item name="android:layout_marginBottom">5dp</item>
+        <item name="android:layout_marginLeft">10dp</item>
+        <item name="android:layout_marginRight">10dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:background">@drawable/gradient_black</item>
+    </style>
+
 </resources>
