--- a/quitesleep3/res/layout/contactstab.xml
+++ b/quitesleep3/res/layout/contactstab.xml
@@ -33,7 +33,7 @@
         <TextView
             android:id="@+id/contacts.separator.addContact"
             style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
             android:text="@string/contacts.separator.addContact" />
@@ -48,8 +48,8 @@
         <TextView
             android:id="@+id/contacts.separator.removeContact"
             style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:text="@string/contacts.separator.removeContact" />
 
@@ -65,8 +65,8 @@
         <TextView
             android:id="@+id/contacts.separator.syncContacts"
             style="?android:attr/listSeparatorTextViewStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginTop="5dip"
             android:text="@string/contacts.separator.syncContacts" />
 
